remove test, add workflow to test